bat.string1.lessons.bat.string1.StringYak.scala.error
stringYak:7: error: unclosed character literal
		if(i==0 && str.substring(i,3)=='yak')
                                                   ^stringYak:9: error: unclosed character literal
		else if(i==str.length-1 && str.substring(i,3)=='yak')
                                                                   ^stringYak:11: error: unclosed character literal
		else if(str.substring(i,3)!='yak')
                                                ^